--- a/index.html
+++ b/index.html
@@ -27,6 +27,32 @@
             <img src="./images/lead-polka.jpg" alt="Girl train" class="lead__image">
             <p class="lead__caption">ваша полка — верхняя</p>
         </section>
+        <section class="intro">
+            <h2 class="intro__title">Чего мы там не видели?</h2>
+            <p class="intro__text">
+          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
+            </p>
+            <ul class="intro__list">
+                <li>Часовых поясов <span class="intro__span-item">11</span></li>
+                <li>Объектов природного наследия ЮНЕСКО <span class="intro__span-item">12</span></li>
+                <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span-item">16</span></li>
+                <li>Природных заповедников <span class="intro__span-item">105</span></li>
+                <li>Аэропортов <span class="intro__span-item">241</span></li>
+        </section>
+        <section class="photo-grid">
+            <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Train window">
+            <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Tulsi">
+            <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Fog and wolf">
+            <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Sochi">
+            <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Car wheel">
+            <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Baikal">
+            <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Elbrus">
+            <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Sign">
+            <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Kamchatka">
+            <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Kamchatka">
+            <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Baikal">
+            <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Mountains">
+          </section>
     </main>
 
     <footer class="footer"></footer>
