Rewriting alt tags

--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
         </section>
 
         <section class="photo-grid">
-          <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Train window">
-          <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Tulsi">
-          <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Fog and wolf">
-          <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Sochi">
-          <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Car wheel">
-          <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Baikal">
-          <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Elbrus">
-          <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Sign">
-          <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Kamchatka">
-          <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Kamchatka">
-          <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Baikal">
-          <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Mountains">
+          <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Окно поезда">
+          <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Тулсы">
+          <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Волк на фоне тумана">
+          <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
+          <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Колесо автомобиля на льду">
+          <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Байкал">
+          <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
+          <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Знак пешеходного перехода на фоне гор">
+          <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
+          <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка">
+          <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал">
+          <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Горы">
         </section>
 
         <section class="places">
